--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1319,7 +1319,7 @@ header{background:#157ed2}
 
 .top-cart-row .dropdown-cart .lnk-cart {
   padding: 0px;
-      background: #006cb4;
+      background: #415A77;
     border: 1px solid #24609c;
   border-radius: 3px;
   display: inline-block;
