--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -19,41 +19,14 @@
 			<div class="blog-page">
 				<div class="col-md-9">
 					<div class="blog-post  wow fadeInUp">
-	<a href="blog-details.html"><img class="img-responsive" src="\image\blog\z5456795985757_dbfbcd9e216f967634aa2ccec8bf023d.jpg" alt=""></a>
-	<h1><a href="blog-details.html">Nemo enim ipsam voluptatem quia voluptas sit aspernatur</a></h1>
+	<a ><img class="img-responsive" src="\image\blog\z5456795985757_dbfbcd9e216f967634aa2ccec8bf023d.jpg" alt=""></a>
+	<h1><a >Unpacking The 'Lanterne Rouge': Glory in Coming Last at the Tour De France</a></h1>
 	<span class="author">John Doe</span>
 	<span class="review">6 Comments</span>
 	<span class="date-time">14/06/2016 10.00AM</span>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum...</p>
-	<a href="#" class="btn btn-upper btn-primary read-more">read more</a>
+	<p>The Tour De France is often seen as a race of glory for the fastest, the strongest, and the most endurance-tested cyclists. But in this prestigious race, there's one accolade that paradoxically celebrates the last rider, the 'Lanterne Rouge'. Let's delve into this unique honor and understand why sometimes, finishing last is as glorious as winning.</p>
 </div>
-<div class="blog-post outer-top-bd  wow fadeInUp">
-	<a href="blog-details.html"><img class="img-responsive" src="C:\Users\Admin\Desktop\DEV\Web developed\project\public\image\blog\z5456795985768_f2f7c57163423002025a5d0034aa5465.jpg" alt=""></a>
-	<h1><a href="blog-details.html">Nemo enim ipsam voluptatem quia voluptas sit aspernatur</a></h1>
-	<span class="author">Sarah Smith</span>
-	<span class="review">6 Comments</span>
-	<span class="date-time">20/06/2016 11.00AM</span>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum...</p>
-	<a href="#" class="btn btn-upper btn-primary read-more">read more</a>
-</div>
-<div class="blog-post outer-top-bd  wow fadeInUp">
-	<a href="blog-details.html"><img class="img-responsive" src="assets\images\blog-post\blog_big_03.jpg" alt=""></a>
-	<h1><a href="blog-details.html">Nemo enim ipsam voluptatem quia voluptas sit aspernatur</a></h1>
-	<span class="author">Mark Doe</span>
-	<span class="review">6 Comments</span>
-	<span class="date-time">14/06/2014 11.00AM</span>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum...</p>
-	<a href="#" class="btn btn-upper btn-primary read-more">read more</a>
-</div>
-<div class="blog-post outer-top-bd  wow fadeInUp">
-	<a href="blog-details.html"><img class="img-responsive" src="assets\images\blog-post\blog_big_03.jpg" alt=""></a>
-	<h1><a href="blog-details.html">Nemo enim ipsam voluptatem quia voluptas sit aspernatur</a></h1>
-	<span class="author">Mark Doe</span>
-	<span class="review">6 Comments</span>
-	<span class="date-time">14/06/2014 11.00AM</span>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum...</p>
-	<a href="#" class="btn btn-upper btn-primary read-more">read more</a>
-</div>
+
 <div class="clearfix blog-pagination filters-container  wow fadeInUp" style="padding:0px; background:none; box-shadow:none; margin-top:15px; border:none">
 						
 	<div class="text-right">
