--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,7 +22,7 @@
               <div class="clients_author"> <span><p style="font-size: 30px;">Feedback</p></span> </div>
 
               <div class="testimonials"><em>"</em> Rented a bike from these guy's for 10 day's over the Xmas/NY's period and they were a pleasure to deal with. Communicated with them through Facebook and they had everything ready and waiting for me on the agreed date. Also did 2 organised rides with them that was a great way to see the city.<em>"</em></div>
-              <div class="clients_author">Trung Kiên <span>Abc Company</span> </div>
+              <div class="clients_author">Trung Kiên <span>ádasd Company</span> </div>
               <!-- /.container-fluid --> 
             </div>
             <!-- /.item -->
