--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -84,7 +84,7 @@
 
           <div class="col-xs-12 col-sm-12 col-md-2 animate-dropdown top-cart-row" >
             <!-- ============================================================= SHOPPING CART DROPDOWN ============================================================= -->
-            <div class="dropdown dropdown-cart" >
+            <div class="dropdown dropdown-cart" style="width: 200px; padding-left: 15px;">
               <a href="/shopping-cart" class="dropdown-toggle lnk-cart" data-toggle="dropdown">
                   <div class="items-cart-inner" ">
                       <div class="basket" style="background-color: #415a77;"> 
@@ -154,7 +154,7 @@
                 <ul class="nav navbar-nav">
                   <li class="active dropdown yamm-fw"> <a href="/">
                   Home </a> </li>
-                    
+                
                   <% productCategory.forEach(category=> { %>
                     <li class="dropdown yamm mega-menu">
                       <a href="/" data-hover="dropdown" class="dropdown-toggle" data-toggle="dropdown">
@@ -186,9 +186,11 @@
                           </li>
                         </ul>
                         <% } %>
+                       
                     </li>
                     <% }) %> 
-                      
+                    <li class="active dropdown yamm mega-menu" style="background-color: #1B263B;" > <a href="/blog">
+                      Blog </a> </li>
                 </ul>
                 <!-- /.navbar-nav -->
                 <div class="clearfix"></div>
