--- a/views/shopping-cart.ejs
+++ b/views/shopping-cart.ejs
@@ -41,8 +41,12 @@
 			
 					<% Grandtotal += product.item.price *product.qty ; TotalQuantity += product.qty %>
 				<tr>
-					<td class="romove-item"><a href="#" title="cancel" class="icon"><i class="fa fa-trash-o"></i></a></td>
-					<td class="cart-image">
+					<td class="romove-item">
+                        <form action="/cart/delete" method="POST">
+                            <input type="hidden" name="product_id" value="<%= product.item.id %>">
+                            <button type="submit" title="cancel" class="icon"><i class="fa fa-trash-o"></i></button>
+                        </form>
+                    </td>					<td class="cart-image">
 						<a class="entry-thumbnail" href="detail.html">
 						    <img src="<%= product.item.image  %>" alt="">
 						</a>
